# stable-social-token

./: Anchor.toml  README.md  package-lock.json  package.json
programs/candy-wrapper/: Cargo.toml
programs/candy-wrapper/src/: error.rs  lib.rs  state.rs  utils.rs
programs/candy-wrapper/src/instructions/: change_admin.rs  change_fee_collector.rs  change_issuance_fee.rs  change_redemption_fee.rs  change_transfer_fee.rs  close_account.rs  create_mint.rs  create_mint_metadata.rs  issue_mint.rs  mod.rs  redeem_basecoin.rs  set_fees_to_immutable.rs  set_to_immutable.rs  withdraw_fees.rs
programs/candy-wrapper/src/instructions/admin/: mod.rs
programs/stable-social-token/: Cargo.toml
programs/stable-social-token/src/: error.rs  lib.rs  state.rs  utils.rs
programs/stable-social-token/src/instructions/: create_mint.rs  create_mint_metadata.rs  issue_mint.rs  mod.rs  redeem_basecoin.rs  redeem_stablecoin.rs  withdraw_fees.rs  withdraw_withheld_tokens_from_mint.rs
programs/stable-social-token/src/instructions/admin/: set_protocol_fee.rs
programs/wild-fire/: Cargo.toml
programs/wild-fire/src/: lib.rs  state.rs
programs/wild-fire/src/instructions/: change_transfer_fee.rs  create_mint.rs  create_mint_metadata.rs  issue_mint.rs  mod.rs  set_to_immutable.rs  update_mint_metadata.rs  withdraw_fees.rs
tests/: candy-wrapper.ts  stable-social-token.ts  wild-fire.ts
