[package]
name = "stable-social-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_social_token"

[features]
default = ["devnet"]
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version="0.30.0", features=["init-if-needed"]}
anchor-spl = "0.30.0"
solana-program = "*"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}